# Discovery-server

./: README.md
profiles/: profile.xml
src/: CMakeLists.txt
src/client_one/: client_one_dp.cpp  client_one_dp.hpp  main.cpp
src/client_two/: client_two_dp.cpp  client_two_dp.hpp  main.cpp
src/server/: main.cpp  server_dp.cpp  server_dp.hpp
src/types/: data_type.cxx  data_type.h  data_type.idl  data_typeCdrAux.hpp  data_typeCdrAux.ipp  data_typePubSubTypes.cxx  data_typePubSubTypes.h
